@@ -1,5 +1,7 @@
 = HEAD
 
+* Document how to allow per-branch HTML escaping of <%= %> in the view_options plugin (jeremyevans)
+
 * Add :include_request option to json and json_parser plugins to include request in :serializer/:parser call (janko-m) (#26)
 
 * Optimize template cache lookup in render plugin when :cache_key is given (jeremyevans)
